tests/syntax/good/expr_binop1.c

void f(){

xyzt1 + 1;
}

