tests/syntax/bad/instr_return_fail0.c

void f() {
1 + return 3;
}

